Third commit: further improvement

--- a/playPadel/website/templates/website/homepage.html
+++ b/playPadel/website/templates/website/homepage.html
@@ -8,7 +8,7 @@
         <div class="hero-content">
             <h2>Benvenuti su PlayPadel</h2>
             <p>Il miglior sito per prenotare i campi da padel.</p>
-            <a href="#" class="cta-button">Prenota Ora</a>
+            <a href="{% url 'website:prenota' %}" class="cta-button">Prenota Ora</a>
         </div>
     </section>
 
