--- a/playPadel/website/templates/website/impianti.html
+++ b/playPadel/website/templates/website/impianti.html
@@ -4,8 +4,6 @@
 
 {% block content %}
 
-    {% for impianto in object_list %}
-        {{ impianto.nome }} <br>
-    {% endfor %}
+    Impianti
 
 {% endblock %}
