--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %} {% endblock %} </title>
         <link rel="icon" href="{% static '/img/favicon.ico' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
     </head>
     <body>
@@ -15,9 +16,9 @@
                 <div class="separator"></div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">Home</a></li> <!-- MODIFICA -->
-                        <li><a href="#">Impianti</a></li>
-                        <li><a href="#">Prenota</a></li>
+                        <li><a href="{% url 'website:homepage' %}">Home</a></li> <!-- MODIFICA -->
+                        <li><a href="{% url 'website:impianti' %}">Impianti</a></li>
+                        <li><a href="{% url 'website:prenota' %}">Prenota</a></li>
                     </ul>
                 </nav>
             </div>
@@ -70,5 +71,6 @@
                 &copy; 2024 PlayPadel. Tutti i diritti riservati.
             </div>
         </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
