--- a/playPadel/templates/playPadel/signup.html
+++ b/playPadel/templates/playPadel/signup.html
@@ -11,8 +11,8 @@
             <h2>Registrati</h2>
             <p>Seleziona il tipo di account che vuoi creare</p>
             <div class="tipo-buttons">
-                <a href="{% url 'student_signup' %}" class="btn btn-cliente btn-lg" role="button">Sono un cliente</a>
-                <a href="{% url 'teacher_signup' %}" class="btn btn-gestore btn-lg" role="button">Sono un gestore</a>
+                <a href="{% url 'registra_cliente' %}" class="btn btn-cliente btn-lg" role="button">Sono un cliente</a>
+                <a href="{% url 'registra_gestore' %}" class="btn btn-gestore btn-lg" role="button">Sono un gestore</a>
             </div>
         </div>
 
