Added bg_img and styled homepage

--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -14,7 +14,8 @@
         <header class="bg-dark py-3 border-bottom border-secondary">
             <div class="container d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
-                    <h1 class="h3 mb-0 me-4">PlayPadel</h1>
+                    <img src="{% static '/img/favicon.svg'%}" alt="Logo" class="mr-3" style="height: 30px; width: 30px;">
+                    <h1 class="text-light h3 mb-0 me-4">PlayPadel</h1>
                     <span class="border-end mx-3" style="height: 24px;"></span>
                     <nav>
                         <ul class="list-unstyled d-flex mb-0">
@@ -39,7 +40,7 @@
         {% endblock %}
 
         <footer class="bg-dark py-4 border-top border-secondary">
-            <div class="container text-center">
+            <div class="container text-center text-light">
                 <p class="mb-0">
                     <a href="#" class="text-light text-decoration-none">Chi siamo</a>
                     |
@@ -49,7 +50,7 @@
                     |
                     <a href="#" class="text-light text-decoration-none">Termini di Servizio</a>
                 </p>
-                <p class="mb-0">© 2024 PlayPadel. Tutti i diritti riservati.</p>
+                <p class="text-light mb-0">© 2024 PlayPadel. Tutti i diritti riservati.</p>
             </div>
         </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
