--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -7,9 +7,8 @@
         <title>{% block title %} {% endblock %} </title>
         <link rel="icon" href="{% static '/img/favicon.ico' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
     </head>
-    <body>
+    <body class="position-relative">
 
         <header class="bg-dark py-3 border-bottom border-secondary">
             <div class="container d-flex justify-content-between align-items-center">
@@ -39,7 +38,7 @@
         {% block content %}
         {% endblock %}
 
-        <footer class="bg-dark py-4 border-top border-secondary">
+        <footer class="bg-dark py-4 border-top border-secondary position-absolute mb-0 w-100">
             <div class="container text-center text-light">
                 <p class="mb-0">
                     <a href="#" class="text-light text-decoration-none">Chi siamo</a>
