--- a/playPadel/website/templates/website/homepage.html
+++ b/playPadel/website/templates/website/homepage.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 
-    <section class="hero bg-primary text-light text-center py-5" style="background-image: url('{% static '/img/homepage_photo.png' %}'); opacity: 0.9; background-position: left;">
+    <section class="hero bg-primary text-light text text-center py-5" style="background-image: url('{% static '/img/homepage_photo.png' %}'); opacity: 0.9; background-position: left;">
         <div class="container">
-            <h1 class="display-4">Benvenuti su <strong>PlayPadel</strong></h1>
-            <p class="lead">Prenota facilmente il tuo campo da padel nei migliori impianti della tua città</p>
+            <h1 class="display-4 text-white"><strong>Benvenuti su PlayPadel</strong></h1>
+            <p class="lead"><mark>Prenota facilmente il tuo campo da padel nei migliori impianti della tua città</mark></p>
             <a href="{% url 'website:prenota' %}" class="btn btn-light btn-lg">Prenota Ora</a>
         </div>
     </section>
@@ -46,24 +46,24 @@
                 </div>
                 <div class="col-md-4">
                     <div class="testimonial p-4 bg-white rounded shadow-sm">
-                        <p>"Servizio eccellente, facile da usare e con tante opzioni!"</p>
-                        <footer class="blockquote-footer bg-transparent text-dark text-right">Marco Bianchi</footer>
+                        <p>"Servizio eccellente, facile da usare e con tant impianti!"</p>
+                        <footer class="blockquote-footer bg-transparent text-dark text-right">Marco Bosi</footer>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="testimonial p-4 bg-white rounded shadow-sm">
                         <p>"Finalmente un sito che rende semplice prenotare un campo da padel!"</p>
-                        <footer class="blockquote-footer bg-transparent text-dark text-right">Luca Verdi</footer>
+                        <footer class="blockquote-footer bg-transparent text-dark text-right">Luca Adami</footer>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="cta bg-primary text-white text-center py-5">
+    <section class="cta bg-primary text-white text-center py-xl-5">
         <div class="container">
             <h2>Iscriviti e inizia a giocare oggi!</h2>
-            <a href="{% url 'registrati' %}" class="btn btn-light btn-lg mt-3">Iscriviti Ora</a>
+            <a href="{% url 'registrati' %}" class="btn btn-light btn-lg mt-3">Registrati Ora</a>
         </div>
     </section>
 
