--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -2,10 +2,10 @@
 
 {% load static %}
 
-{% block title %} PlayPadel - Impianti {% endblock %}
+{% block title %} PlayPadel - {{ object.nome }} {% endblock %}
 
 {% block content %}
 
-    Impianto
+    Impianto {{ object.nome }}
 
 {% endblock %}
