Managed to connect tables w/foreignkey in a view

--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -12,6 +12,10 @@
             <img src="{% static 'img/profile_pics' %}/{{ object.foto }}" class="img-fluid" alt="Responsive image">
             <!-- AGGIUNGERE INFO SU GESTORE -->
             {{ object.gestore.user.first_name }}
+            <br>
+            {% for i in campo %}
+            {{ i.tipologia }}
+            {% endfor %}
         </div>
     </section>
 
