Further additions to impianto_detail

--- a/playPadel/website/templates/website/homepage.html
+++ b/playPadel/website/templates/website/homepage.html
@@ -35,8 +35,7 @@
 
     <section class="testimonials bg-light py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Cosa dicono di noi</h2>
-            <i class="bi bi-star-fill"></i>
+            <h2 class="text-center mb-5">Cosa Dicono di Noi</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="testimonial p-4 bg-white rounded shadow-sm">
@@ -46,7 +45,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="testimonial p-4 bg-white rounded shadow-sm">
-                        <p>"Servizio eccellente, facile da usare e con tant impianti!"</p>
+                        <p>"Servizio eccellente, facile da usare e con tanti impianti!"</p>
                         <footer class="blockquote-footer bg-transparent text-dark text-right">Marco Bosi</footer>
                     </div>
                 </div>
