Commit before vacay

--- a/playPadel/static/css/impianto_detail_style.css
+++ b/playPadel/static/css/impianto_detail_style.css
@@ -1,10 +1,4 @@
-.rotate {
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    transition: all .3s linear;
-}
-.rotate.down {
-    -moz-transform:rotate(180deg);
-    -webkit-transform:rotate(180deg);
-    transform:rotate(180deg);
+.card-header.collapsed .bi-chevron-up {
+  transform: rotate(180deg);
+    transition: .3s ease-in-out;
 }
