Started reservation system

--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -14,8 +14,8 @@
         <div class="container mt-5">
             <div class="row align-items-center">
                 <div class="col-md-2 text-left">
-                    <a href="{% url 'website:impianti' %}" class="btn btn-outline-dark">
-                        Torna alla lista impianti
+                    <a href="{% url 'website:impianti' %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla lista degli impianti">
+                        <i class="bi bi-arrow-left"></i>
                     </a>
                 </div>
                 <div class="col-md-8 text-center">
@@ -36,7 +36,7 @@
                         </li>
                         <li class="list-group-item">
                             <i class="bi bi-cash"></i>
-                            <strong>Prezzi:</strong> A partire da {{ object.prezzi }}€
+                            <strong>Prezzi:</strong> A partire da {{ object.prezzi }}€ l'ora
                         </li>
                         <li class="list-group-item">
                             <i class="bi bi-telephone-fill"></i>
@@ -66,7 +66,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col text-center">
-                    <h2>Lista campi</h2>
+                    <h2 id="lista_campi">Lista campi</h2>
                 </div>
             </div>
             <div id="accordion">
@@ -78,11 +78,32 @@
                         </a>
                         <div id="collapse{{ forloop.counter }}" class="collapse hidden" data-parent="#accordion">
                             <div class="card-body" style="border-top: 1px solid #ddd;">
-                                Orari...
+                                <div class="btn-group-toggle" data-toggle="buttons">
+                                    {% for j in differenza_orario %}
+                                        <label class="btn btn-outline-primary inactive">
+                                            <input type="checkbox" checked autocomplete="off"> {{ inizio }}
+                                        </label>
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
+            </div>
+            <div class="row align-items-center my-4">
+                <div class="col-md-4 text-left">
+                    <a href="" class="btn btn-outline-danger" onclick="$().button('toggle')">
+                        <i class="bi bi-x"></i> Annulla selezione
+                    </a>
+                </div>
+                <div class="col-md-4 text-right">
+                    <h5>Totale: </h5>
+                </div>
+                <div class="col-md-4 text-right">
+                    <a href="{% url 'website:conferma_prenotazione' %}" class="btn btn-outline-success">
+                        <strong>Prenota </strong><i class="bi bi-calendar2-check"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
