--- a/playPadel/website/templates/website/impianti.html
+++ b/playPadel/website/templates/website/impianti.html
@@ -26,6 +26,7 @@
                             </ul>
                             <div class="card-body">
                                 <a href="{% url 'website:impianto_detail' impianto.slug %}" class="card-link btn btn-outline-primary " role="button">Dettagli</a>
+                                <a href="#" class="card-link btn btn-outline-success" role="button">Prenota campo</a>
                             </div>
                         </div>
                     </div>
