--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -79,9 +79,9 @@
                         <div id="collapse{{ forloop.counter }}" class="collapse hidden" data-parent="#accordion">
                             <div class="card-body" style="border-top: 1px solid #ddd;">
                                 <div class="btn-group-toggle" data-toggle="buttons">
-                                    {% for j in differenza_orario %}
-                                        <label class="btn btn-outline-primary inactive">
-                                            <input type="checkbox" checked autocomplete="off"> {{ inizio }}
+                                    {% for ora in ore %}
+                                        <label class="btn btn-outline-primary inactive my-1" style="min-width: 70px;">
+                                            <input type="checkbox" checked autocomplete="off"> {{ ora }}
                                         </label>
                                     {% endfor %}
                                 </div>
